<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="name_movie">Movie Name</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="name_movie_detail">Movie Detail Name</string>
    <string name="description_movie_detail">Description</string>
    <string name="desc">Genre</string>
    <string name="desc2">Duration</string>
    <string name="desc3">Director</string>
    <string name="desc4">Rating</string>
    <string name="content_identity">content identity</string>
    <string name="description_bar">Description</string>
    <string name="hero_image">hero image</string>
    <string name="value">Value</string>
    <string name="poster_film">Poster Film</string>
    <string-array name="data_name">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian \nRhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_name_tvshow">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Iron Fist</item>
        <item>Shameless</item>
        <item>SuperGirl</item>
        <item>SuperNatural</item>
    </string-array>
    <string-array name="data_genre">
        <item>Romance</item>
        <item>Action</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Biography</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Action</item>
        <item>Animation</item>
        <item>Action</item>
    </string-array>
    <string-array name="data_genre_tvshow">
        <item>Action</item>
        <item>Action, Adventure</item>
        <item>Action</item>
        <item>Action, Adventure</item>
        <item>Action, Crime</item>
        <item>Drama, Romance</item>
        <item>Action, Adventure</item>
        <item>Comedy, Drama</item>
        <item>Action, Adventure</item>
        <item>Drama, Fantasy</item>
    </string-array>
    <string-array name="data_duration">
        <item>2h 16min</item>
        <item>2h 23min</item>
        <item>2h 29min</item>
        <item>2h 4min</item>
        <item>2h 14min</item>
        <item>1h 54min</item>
        <item>2h 10min</item>
        <item>1h 59min</item>
        <item>1h 44min</item>
        <item>1h 52min</item>
    </string-array>
    <string-array name="data_duration_tvshow">
        <item>42min</item>
        <item>1h</item>
        <item>43min</item>
        <item>57min</item>
        <item>42min</item>
        <item>41min</item>
        <item>55min</item>
        <item>46min</item>
        <item>43min</item>
        <item>44min</item>
    </string-array>
    <string-array name="data_director">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Anthony Russo</item>
        <item>Susanne Bier</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Steven Caple</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="data_series_tvshow">
        <item>TV Series 2012</item>
        <item>TV Series 2019</item>
        <item>TV Series 2014</item>
        <item>TV Series 2011 en dash 2019</item>
        <item>TV Series 2014 en dash 2019</item>
        <item>TV Series 2005</item>
        <item>TV Series 2017 en dash 2018</item>
        <item>TV Series 2011</item>
        <item>TV Series 2015</item>
        <item>TV Series 2005</item>

    </string-array>
    <string-array name="data_rating">
        <item>7.7\u2605</item>
        <item>7.0\u2605</item>
        <item>8.5\u2605</item>
        <item>6.6\u2605</item>
        <item>8.0\u2605</item>
        <item>6.8\u2605</item>
        <item>7.1\u2605</item>
        <item>7.7\u2605</item>
        <item>7.5\u2605</item>
        <item>6.7\u2605</item>
    </string-array>
    <string-array name="data_rating_tvshow">
        <item>7.6\u2605</item>
        <item>8.0\u2605</item>
        <item>7.8\u2605</item>
        <item>9.3\u2605</item>
        <item>7.8\u2605</item>
        <item>7.6\u2605</item>
        <item>6.5\u2605</item>
        <item>8.6\u2605</item>
        <item>6.3\u2605</item>
        <item>8.4\u2605</item>
    </string-array>
    <string-array name="data_description">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock and roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_description_tvshow">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his new found powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it wonnot be long before the world learns what Barry Allen has become. The Flash.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime world greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world most iconic villains? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker?</item>
        <item>Follows the personal and professional lives of a group of doctors at Seattle’s Grey Sloan Memorial Hospital.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Chicagoan Frank Gallagher is the proud single dad of six smart, industrious, independent kids, who without him would be. perhaps better off. When Frank not at the bar spending what little money they have, he passed out on the floor. But the kids have found ways to grow up in spite of him. They may not be like any family you know, but they make no apologies for being exactly who they are.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>When they were boys, Sam and Dean Winchester lost their mother to a mysterious and demonic supernatural force. Subsequently, their father raised them to be soldiers. He taught them about the paranormal evil that lives in the dark corners and on the back roads of America and he taught them how to kill it. Now, the Winchester brothers crisscross the country in their 67 Chevy Impala, battling every kind of supernatural threat they encounter along the way.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Movie</string>
    <string name="poster_tv_show">Poster TV Show</string>
    <string name="tv_show_name">Nama TV Show</string>
</resources>